2011-01-31  Tobias Burnus  <burnus@net-b.de>

	PR fortran/47042
	* gfortran.dg/stmt_func_1.f90: New.

2011-01-31  Tobias Burnus  <burnus@net-b.de>

	PR fortran/47042
	* gfortran.dg/interface_34.f90: New.

2011-01-30  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/47523
	* gfortran.dg/realloc_on_assign_5.f03: New test.
	* gfortran.dg/realloc_on_assign_5.f03: New test.

2011-01-29  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>

	* gfortran.dg/bessel_6.f90: XFAIL on spu-*-*.
	* gfortran.dg/bessel_7.f90: Likewise.
	* gfortran.dg/erf_2.F90: Likewise.  Always run with -O0.

	* gfortran.dg/complex_intrinsics_5.f90: Increase "epsilon".
	* gfortran.dg/sum_init_expr.f03: Likewise.

	* gfortran.dg/realloc_on_assign_2.f03: Skip on spu-*-*.

	* gfortran.dg/lto/20091016-1_0.f90: Replace -shared with
	-r -nostdlib.

	* gfortran.dg/vect/fast-math-vect-8.f90: Check for vectorized
	loop only on "vect_intfloat_cvt" targets.

2011-01-29  Tobias Burnus  <burnus@net-b.de>

	PR fortran/47531
	* gfortran.dg/shape_6.f90: New.

2011-01-29  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR libgfortran/47434
	* gfortran.dg/read_infnan_1.f90: Update test.
	* gfortran.dg/module_nan.f90: Update test.
	* gfortran.dg/char4_iunit_1.f03: Update test.
	* gfortran.dg/large_real_kind_1.f90: Update test.
	* gfortran.dg/real_const_3.f90: Update test.
	* gfortran.fortran-torture/execute/nan_inf_fmt.f90: Update test.

2011-01-29  Dodji Seketeli  <dodji@redhat.com>

	PR c++/47311
	* g++.dg/template/param2.C: New test.

2011-01-28  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR libgfortran/47285
	* gfortran.dg/fmt_g.f: New test.

2011-01-28  Tobias Burnus  <burnus@net-b.de>

	PR fortran/47507
	* gfortran.dg/pure_formal_1.f90: New.

2011-01-28  Jakub Jelinek  <jakub@redhat.com>

	PR target/42894
	* gcc.dg/tls/pr42894.c: New test.

2011-01-28  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* gcc.dg/pr47276.c: Add dg-require-visibility.

2011-01-28  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>
